build browser files

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -10,19 +10,19 @@
     <img
       [ngStyle]="{ 'right.px': i * 5 }"
       *ngFor="let c of [0, 1, 2, 3]; let i = index"
-      src="./../../assets/cards/card_cover.png"
+      src="./assets/cards/card_cover.png"
     />
     <img
       (click)="takeCard()"
       class="top-card"
       style="right: 25px"
-      src="./../../assets/cards/card_cover.png"
+      src="./assets/cards/card_cover.png"
     />
 
     <img
       *ngFor="let card of game.playedCard"
       class="played-card"
-      src="./../../assets/cards/{{ card }}"
+      src="./assets/cards/{{ card }}"
     />
 
     <img
@@ -30,7 +30,7 @@
       *ngIf="pickCardAnimation"
       class="pick-card"
       style="right: 25px"
-      src="./../../assets/cards/{{ currentCard }}"
+      src="./assets/cards/{{ currentCard }}"
     />
   </div>
 </div>
