--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,7 @@
-<app-player
-  *ngFor="let player of game.players; let i = index"
-  [ngStyle]="{ 'top.px': 100 + (i * 80)}"
-  [playerActive]="i == game.currentPlayer"
-  [name]="player"
-  class="player-position"
-></app-player>
+<app-player  *ngFor="let player of game.players; let i = index"  [ngStyle]="{ 'top.px': 100 + (i * 80)}"
+  [playerActive]="i == game.currentPlayer" [name]="player" class="player-position">
+</app-player>
+
 <div class="field">
   <div class="card-stack">
     <img
@@ -27,15 +24,15 @@
 
     <img
       (click)="takeCard()"
-      *ngIf="pickCardAnimation"
+      *ngIf="game.pickCardAnimation"
       class="pick-card"
       style="right: 25px"
-      src="./assets/cards/{{ currentCard }}"
+      src="./assets/cards/{{ game.currentCard }}"
     />
   </div>
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
   <mat-icon>add</mat-icon>
